--- a/src/HASS.Agent.Shared/Properties/Resources.resx
+++ b/src/HASS.Agent.Shared/Properties/Resources.resx
@@ -117,4 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ServiceGeneral_BtnStoreCustomExecutor_MessageBox2" xml:space="preserve">
+		<value>Please select an executor first (tip: doubleclick to browse).</value>
+	</data>
 </root>
